--- a/index.html
+++ b/index.html
@@ -30,11 +30,26 @@
       margin: 0 auto;
       padding: 22px 16px 36px;
     }
+
+    /* ===== LOGO ===== */
+    .logo-box{
+      display:flex;
+      justify-content:center;
+      margin: 6px 0 12px;
+    }
+    .logo-box img{
+      width: 110px;
+      max-width: 40vw;
+      height: auto;
+      filter: drop-shadow(0 10px 25px rgba(0,0,0,.35));
+    }
+
     header{
       display:flex;
       flex-direction:column;
       gap:8px;
       margin-bottom: 16px;
+      text-align:center;
     }
     h1{
       margin:0;
@@ -199,6 +214,13 @@
 
 <body>
   <div class="wrap">
+
+    <!-- LOGO -->
+    <div class="logo-box">
+      <!-- ใส่ไฟล์โลโก้ชื่อ logosawee.png ไว้โฟลเดอร์เดียวกับไฟล์ html -->
+      <img src="logosawee.png" alt="โรงพยาบาลสวี">
+    </div>
+
     <header>
       <h1>rt-PA Dose Calculator</h1>
       <div class="sub">ใส่น้ำหนัก (kg) → คำนวณขนาดยารวม, bolus 10% และ drip 90% พร้อมการดึงยาออกจากขวด</div>
@@ -332,48 +354,40 @@
         return;
       }
 
-      // cap weight at 100 for all calculations
+      // ✅ CAP weight at 100 for all calculations
       const w = rawW > 100 ? 100 : rawW;
       capPill.style.display = (rawW > 100) ? 'inline-block' : 'none';
 
-      // 1) total
+      // 1) total (mg)
       const total = w * 0.9;
 
-      // 2) bolus 10%
+      // 2) bolus (mg)
       const bolus = total * 0.1;
 
-      // 3) drip 90% = total - bolus
+      // 3) drip (mg)
       const drip = total - bolus;
 
-      // 4) UPDATED vial logic per your new rules
-      // Vial 1: 50 - (weight*0.9), if negative show 0 (ONLY for w > 55.5 case per your request)
-      // But safest to clamp for all cases (won't affect w<=55.5 anyway)
-      let vial1 = 50 - total;
-      if (vial1 < 0) vial1 = 0;
+      // ✅ 4) VIAL LOGIC (FIXED: NO /100 anywhere)
+      // Vial 1 = 50 - total; if negative show 0
+      const vial1 = Math.max(0, 50 - total);
 
-      let vial2 = 0;
+      // Vial 2
+      const vial2 = (w <= 55.5)
+        ? 0
+        : (total - bolus) - (50 - bolus); // = total - 50
 
-      if (w <= 55.5){
-        // If weight <= 55.5 kg
-        // Vial1 formula: 50 - (weight*0.9) (your rule) — display as is, but value is clamped to 0 if negative
-        vial2 = 0;
-
+      // ✅ formulas text
+      if (w <= 55.5) {
         vial1FormulaEl.textContent = 'สูตร: 50 − (น้ำหนัก × 0.9)';
         vial2FormulaEl.textContent = 'น้ำหนัก ≤ 55.5 kg → ขวดที่ 2 ดึงยาออก 0 mg';
         logicTextEl.textContent = 'เงื่อนไข: น้ำหนัก ≤ 55.5 kg';
-
       } else {
-        // Else if weight > 55.5 and <= 100 (cap already applied)
-        // Vial1: 50 - (weight*0.9) if negative show 0
-        // Vial2: ((w*0.9) - (w*0.9*0.1)) - (50 - (w*0.9*0.1))
-        vial2 = (total - bolus) - (50 - bolus);
-
         vial1FormulaEl.textContent = 'สูตร: 50 − (น้ำหนัก × 0.9) (ถ้าติดลบ = 0)';
         vial2FormulaEl.textContent = 'สูตร: ((น้ำหนัก×0.9)−bolus) − (50−bolus)';
         logicTextEl.textContent = 'เงื่อนไข: น้ำหนัก > 55.5 kg และ ≤ 100 kg (ถ้าเกิน 100 ใช้ 100 แทน)';
       }
 
-      // show
+      // ✅ show results (mg) — IMPORTANT: no divide by 100
       totalMgEl.textContent = round2(total);
       bolusMgEl.textContent = round2(bolus);
       dripMgEl.textContent  = round2(drip);
@@ -382,6 +396,9 @@
 
       emptyState.style.display = 'none';
       results.style.display = 'grid';
+
+      // Debug (ถ้าไม่อยากให้เห็นใน console ลบบรรทัดนี้ได้)
+      // console.log({ rawW, w, total, bolus, drip, vial1, vial2 });
     }
 
     function clearAll(){
@@ -396,12 +413,10 @@
     calcBtn.addEventListener('click', calculate);
     clearBtn.addEventListener('click', clearAll);
 
-    // Enter to calculate
     weightEl.addEventListener('keydown', (e) => {
       if (e.key === 'Enter') calculate();
     });
 
-    // Auto-calc while typing
     weightEl.addEventListener('input', () => {
       if (weightEl.value.trim() !== '') calculate();
       else clearAll();
