--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
             <div class="row">
               <div>
-                <div class="k">4) ขวดที่ 1 ดึงยาออก</div>
+                <div class="k">4) ขวดที่ 1 ดึงยาออก หลัง bolus</div>
                 <div class="muted" id="vial1Formula">-</div>
               </div>
               <div class="v"><span id="vial1Mg">-</span> <span class="small">mg</span></div>
